### Added
- A new Workspace option allows the use of a custom folder as a temporary folder.
- The Database now supports multiple database IDs (separate them with comma).
- Support to Eclipse mzML files.

### Changed
- The "master" GitHub repository was renamed to "main".
- Freequant and Labelquant can now be executed before the Filter command.
- The parameter file was updated, and the terms made more human-readable.

### Fixed
- Small bugs and fixes.
- PSMs lists often contained observations mapping to proteins that did not pass the FDR filter.
- Bio quant was failing because of the unassigned database path.
- Some annotation files were being ignored.