@@ -39,10 +39,10 @@ func init() {
 
 		m.Restore(sys.Meta())
 
-		//ptmprophetCmd.Flags().StringVarP(&m.PTMProphet.Output, "output", "", "", "output prefix file name")
 		ptmprophetCmd.Flags().StringVarP(&m.PTMProphet.Mods, "mods", "", "", "<amino acids, n, or c>:<mass_shift>:<neut_loss1>:...:<neut_lossN>,<amino acids, n, or c>:<mass_shift>:<neut_loss1>:...:<neut_lossN> (overrides the modifications from the interact.pep.xml file)")
 		ptmprophetCmd.Flags().StringVarP(&m.PTMProphet.NIons, "nions", "", "", "use specified N-term ions, separate multiple ions by commas (default: a,b for CID, c for ETD)")
 		ptmprophetCmd.Flags().StringVarP(&m.PTMProphet.CIons, "cions", "", "", "use specified C-term ions, separate multiple ions by commas (default: y for CID, z for ETD)")
+		ptmprophetCmd.Flags().StringVarP(&m.PTMProphet.Output, "output", "", "interact", "output name prefix")
 		ptmprophetCmd.Flags().IntVarP(&m.PTMProphet.EM, "em", "", 2, "set EM models to 0 (no EM), 1 (Intensity EM Model Applied) or 2 (Intensity and Matched Peaks EM Models Applied)")
 		ptmprophetCmd.Flags().IntVarP(&m.PTMProphet.FragPPMTol, "fragppmtol", "", 15, "when computing PSM-specific mass_offset and mass_tolerance, use specified default +/- MS2 mz tolerance on fragment ions")
 		ptmprophetCmd.Flags().IntVarP(&m.PTMProphet.MaxThreads, "maxthreads", "", 1, "use specified number of threads for processing")
